# llm-posttraining

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_license_headers.py
src/llm_posttraining/: ask.py  data.py  eval.py  eval_all_rlvr.py  model.py  reward.py  rlvr.py  run_logger.py  sft.py  viewer.py
src/llm_posttraining/templates/: base.html  run.html  runs.html  step.html
stubs/vllm/: __init__.pyi
stubs/vllm/lora/: request.pyi
