[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-posttraining"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "torch",
    "transformers",
    "peft",
    "trl>=1.0",
    "tqdm",
]

[project.optional-dependencies]
vllm = ["vllm"]

[tool.setuptools.packages.find]
where = ["src"]
