[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-posttraining"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "torch",
    "transformers",
    "peft",
    "trl>=1.0",
    "tqdm",
]

[project.optional-dependencies]
dev = ["ruff", "ty"]
vllm = ["vllm"]

[tool.ty.environment]
extra-paths = ["stubs"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
